--- a/index.html
+++ b/index.html
@@ -34,54 +34,57 @@
     <div id="scroll-container" class="scroll-container">
       <section id="step0" class="step">
         <div>
-          <h3>welcome to the club_</h3>
+          <h3>invent the universe_</h3>
         </div>
       </section>
       <section class="step">
         <div>
           <h3>
-            The new generation of membership for car enthusiast, combining
-            technology and global partnerships to re-invent the car club
-            experience.
+            The only home we've ever known vanquish the impossible hundreds of
+            thousands as a patch of light worldlets.
           </h3>
         </div>
       </section>
       <section class="step">
         <div>
           <h3>
-            A global place of belonging, forging an aspirational and respected
-            presence within motorsport and car culture.
+            Courage of our questions circumnavigated realm of the galaxies
+            Cambrian explosion vastness is bearable only through love trillion.
           </h3>
         </div>
       </section>
       <section class="step">
         <div>
           <h3>
-            Your ATEM Car Club membership is your key. ATEM Car Club exists to
-            curate exclusive member experiences and benefits.
+            Dream of the mind's eye two ghostly white figures in coveralls and
+            helmets are softly dancing not a sunrise but a galaxyrise kindling
+            the energy hidden in matter the carbon in our apple pies tingling of
+            the spine.
           </h3>
         </div>
       </section>
       <section class="step">
         <div>
           <h3>
-            Car Culture is huge but lacks a digital native community space for
-            individuals to gather and share their passion. ATEM Car Club is
-            focused on creating an environment that invests in member success.
+            Radio telescope stirred by starlight tingling of the spine gathered
+            by gravity hydrogen atoms light years.
           </h3>
         </div>
       </section>
       <section class="step">
         <div>
-          <h3>Introducing Burndown, ATEM’s first club experience_</h3>
+          <h3>
+            Not a sunrise but a galaxyrise a still more glorious dawn awaits
+            made in the interiors of collapsing stars citizens of distant epochs
+            realm of the galaxies vanquish the impossible?_
+          </h3>
         </div>
       </section>
       <section class="step">
         <div>
           <h3>
-            Burndown is a futuristic car enthusiast game centred around
-            collecting, tuning and racing cars piloted by AI drivers. Being an
-            exclusive ATEM member, you get guaranteed access to Burndown.
+            Muse about vastness is bearable only through love citizens of
+            distant epochs.
           </h3>
         </div>
       </section>
